tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/destinationrule-0.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    tsb.tetrate.io/tenant: tenant-0
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/trafficGroup: bookinfo-t0-w0-b-tg0
    tsb.tetrate.io/workspace: bookinfo-t0-ws0
  name: bookinfo-destinationrule-0
  namespace: t0-w0-demo-bookinfo-b-front-n0
spec:
  host: reviews-0.t0-w0-demo-bookinfo-b-front-n0.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  - labels:
      version: v2
    name: v3
