tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/groups.yaml
apiVersion: gateway.tsb.tetrate.io/v2
kind: Group
metadata:
  organization: tetrate
  name: bookinfo-t0-w0-b-gg0
  workspace: bookinfo-t0-ws0
  tenant: tenant-0
spec:
  displayName: bookinfo-t0-w0-b-gg0
  namespaceSelector:
    names:
    - demo/t0-w0-demo-bookinfo-b-front-n0
  configMode: DIRECT
---
apiVersion: traffic.tsb.tetrate.io/v2
kind: Group
metadata:
  organization: tetrate
  name: bookinfo-t0-w0-b-tg0
  workspace: bookinfo-t0-ws0
  tenant: tenant-0
spec:
  displayName: bookinfo-t0-w0-b-tg0
  namespaceSelector:
    names:
    - demo/t0-w0-demo-bookinfo-b-front-n0
  configMode: DIRECT
---
apiVersion: security.tsb.tetrate.io/v2
kind: Group
metadata:
  organization: tetrate
  name: bookinfo-t0-w0-b-sg0
  workspace: bookinfo-t0-ws0
  tenant: tenant-0
spec:
  displayName: bookinfo-t0-w0-b-sg0
  namespaceSelector:
    names:
    - demo/t0-w0-demo-bookinfo-b-front-n0

  configMode: DIRECT
