tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/perm.yaml
apiVersion: rbac.tsb.tetrate.io/v2
kind: WorkspaceAccessBindings
metadata:
  organization: tetrate
  tenant: tenant-0
  workspace: bookinfo-t0-ws0
spec:
  allow:
  - role: rbac/creator
    subjects:
    # Change the name of the team to the desired one
    - team: organizations/tetrate/teams/Platform
---
apiVersion: rbac.tsb.tetrate.io/v2
kind: TrafficAccessBindings
metadata:
  organization: tetrate
  tenant: tenant-0
  workspace: bookinfo-t0-ws0
  group: bookinfo-t0-w0-b-tg0
spec:
  allow:
  - role: rbac/writer
    subjects:
    # Change the name of the user to the desired one
    - user: organizations/tetrate/users/nacx
    - user: organizations/tetrate/users/wusheng
