tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/reviews_vs-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    tsb.tetrate.io/tenant: tenant0
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/trafficGroup: bkift0w0btg0
    tsb.tetrate.io/workspace: bkift0ws0
  name: bookinfo-serviceroute-1
  namespace: t0w0demobkifnd0f
spec:
  gateways:
  - mesh
  hosts:
  - reviews-1.t0w0demobkifnd0f.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews-1.t0w0demobkifnd0f.svc.cluster.local
        subset: v1
      weight: 60
    - destination:
        host: reviews-1.t0w0demobkifnd0f.svc.cluster.local
        subset: v2
      weight: 30
    - destination:
        host: reviews-1.t0w0demobkifnd0f.svc.cluster.local
        subset: v3
      weight: 10
