tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/reviews_vs-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    tsb.tetrate.io/tenant: tenant-0
    tsb.tetrate.io/organization: tetrate
    tsb.tetrate.io/trafficGroup: bookinfo-t0-w0-b-tg0
    tsb.tetrate.io/workspace: bookinfo-t0-ws0
  name: bookinfo-reviews-2
  namespace: t0-w0-demo-bookinfo-b-front-n0
spec:
  gateways:
  - mesh
  hosts:
  - reviews-2.t0-w0-demo-bookinfo-b-front-n0.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews-2.t0-w0-demo-bookinfo-b-front-n0.svc.cluster.local
        subset: v1
      weight: 60
    - destination:
        host: reviews-2.t0-w0-demo-bookinfo-b-front-n0.svc.cluster.local
        subset: v2
      weight: 30
    - destination:
        host: reviews-2.t0-w0-demo-bookinfo-b-front-n0.svc.cluster.local
        subset: v3
      weight: 10
