tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/security.yaml
apiVersion: security.tsb.tetrate.io/v2
kind: SecuritySetting
metadata:
  organization: tetrate
  name: bookinfo-security-setting-t0-w0-demo-bookinfo-b-front-n0
  workspace: bookinfo-t0-ws0
  group: bookinfo-t0-w0-b-sg0
  tenant: tenant-0
spec:
  authentication: REQUIRED
  authorization:
    mode: WORKSPACE
