tetrateci/tsb-util/fixtures/bookinfo_single_direct_generated/tsb-objects/workspaces.yaml
apiversion: api.tsb.tetrate.io/v2
kind: Workspace
metadata:
  organization: tetrate
  name: bkift0ws0
  tenant: tenant0
spec:
  displayName: bkift0ws0
  namespaceSelector:
    names:
    - demo/t0w0demobkifnd0f
